HTML and CSS formatting base

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <header>
-        <div id="header">
-            <input type="text" id="user_local"/>
-        </div>
+        <div id="header"></div>
     </header>
     <main>
-
+        <div id="content">
+            <div class="grid-container">
+                <div id="yesterday-info" class="design-test"></div>
+                <div id="today-info" class="design-test"></div>
+                <div id="tomorrow-info" class="design-test"></div>
+            </div>
+        </div>
     </main>
     <script src="main.js" defer></script>
 </body>
