--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <header>
-        <div id="header"></div>
+        <div id="header">
+            <div id="user-input">
+                <label>User Location: </label><input type="text" id="user-location"/><button>Submit</button>
+            </div>
+            <div id="header-info">
+                <p>Temperature:</p>
+                <div class="gap-1"></div>
+                <p>This is a test</p>
+                <div class="gap-2"></div>
+            </div>
+        </div>
     </header>
     <main>
         <div id="content">
