Location generating function completed

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <header>
         <div id="header">
             <div id="user-input">
-                <label>User Location: </label><input type="text" id="user-location"/><button>Submit</button>
+                <label>User Location: </label>
+                <input type="text" id="user-location"/>
+                <button id="submit">Submit</button>
             </div>
             <div id="header-info">
                 <p>Temperature:</p>
                 <div class="gap-1"></div>
-                <p>This is a test</p>
+                <p>Awaiting user input</p>
                 <div class="gap-2"></div>
             </div>
         </div>
