MVP completed with poor design

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="header-info">
                 <p>Temperature:</p>
                 <div class="gap-1"></div>
-                <p>Awaiting user input</p>
+                <p id="headerTemp">Awaiting user input</p>
                 <div class="gap-2"></div>
             </div>
         </div>
