Image addition functionality created & CSS works

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="gap-1"></div>
                 <p id="headerTemp">Awaiting user input</p>
                 <div class="gap-2"></div>
+                <img src="" id="weather-image"/>
             </div>
         </div>
     </header>
