CCS styling and weather image added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div id="user-input">
                 <label>User Location: </label>
                 <input type="text" id="user-location"/>
+                <p id="user-input-local"></p>
                 <button id="submit">Submit</button>
             </div>
             <div id="header-info">
