Header styling update - incomplete

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <header>
         <div id="header">
             <div id="user-input">
-                <label>User Location: </label>
-                <input type="text" id="user-location"/>
-                <p id="user-input-local"></p>
+                <label id="location-label">User Location: </label>
+                <input type="text" id="location-input"/>
                 <button id="submit">Submit</button>
             </div>
             <div id="header-info">
