Header functionality mostly complete. Styling and refatoring to complete

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <label id="location-label">User Location: </label>
                 <input type="text" id="location-input"/>
                 <button id="submit">Submit</button>
+                <a href=""><img src="redo.png" id="redo"/></a>
             </div>
             <div id="header-info">
                 <p>Temperature:</p>
