Body complete with daily weather info. Weather image setter updated to be generic

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h4 class="daily-headers">Rain Chance:</h4>
                     <p id="yesterday-rain-chance" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Wind Speed:</h4>
-                    <p id="yesterday-win-speed" class="daily-text">Awaiting user input</p>
+                    <p id="yesterday-wind-speed" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Sunrise:</h4>
                     <p id="yesterday-sunrise" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Sunset:</h4>
@@ -61,7 +61,7 @@
                     <h4 class="daily-headers">Rain Chance:</h4>
                     <p id="today-rain-chance" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Wind Speed:</h4>
-                    <p id="today-win-speed" class="daily-text">Awaiting user input</p>
+                    <p id="today-wind-speed" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Sunrise:</h4>
                     <p id="today-sunrise" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Sunset:</h4>
@@ -81,7 +81,7 @@
                     <h4 class="daily-headers">Rain Chance:</h4>
                     <p id="tomorrow-rain-chance" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Wind Speed:</h4>
-                    <p id="tomorrow-win-speed" class="daily-text">Awaiting user input</p>
+                    <p id="tomorrow-wind-speed" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Sunrise:</h4>
                     <p id="tomorrow-sunrise" class="daily-text">Awaiting user input</p>
                     <h4 class="daily-headers">Sunset:</h4>
