HTML basics set up for 7 day forecast and overview implementation

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
               <img src="sunset.png" alt="sunset" />
               <h4 id="overview-sunset-time"></h4>
             </div>
+
             <div id="hourly-time">
               <h4 class="hourly-info">00:00</h4>
               <h4 class="hourly-info">01:00</h4>
@@ -214,20 +215,111 @@
               <h4 class="hourly-info">23:00</h4>
             </div>
             <div id="hourly-temp">
-                <h4 class="overview-subtitle">Hourly Temperature</h4>
-                <h4 id="temp0" class="hourly-info"></h4>
-                <h4 id="temp1" class="hourly-info"></h4>
-                <h4 id="temp2" class="hourly-info"></h4>
-                <h4 id="temp3" class="hourly-info"></h4>
-                <h4 id="temp4" class="hourly-info"></h4>
-                <h4 id="temp5" class="hourly-info"></h4>
-                <h4 id="temp6" class="hourly-info"></h4>
-                <h4 id="temp7" class="hourly-info"></h4>
-                <h4 id="temp8" class="hourly-info"></h4>
-                <h4 id="temp9" class="hourly-info"></h4>
-                <h4 id="temp10" class="hourly-info"></h4>
-                <h4 id="temp11" class="hourly-info"></h4>
-                
+              <h4 class="overview-subtitle">Hourly Temperature</h4>
+              <h4 id="temp0" class="hourly-info"></h4>
+              <h4 id="temp1" class="hourly-info"></h4>
+              <h4 id="temp2" class="hourly-info"></h4>
+              <h4 id="temp3" class="hourly-info"></h4>
+              <h4 id="temp4" class="hourly-info"></h4>
+              <h4 id="temp5" class="hourly-info"></h4>
+              <h4 id="temp6" class="hourly-info"></h4>
+              <h4 id="temp7" class="hourly-info"></h4>
+              <h4 id="temp8" class="hourly-info"></h4>
+              <h4 id="temp9" class="hourly-info"></h4>
+              <h4 id="temp10" class="hourly-info"></h4>
+              <h4 id="temp11" class="hourly-info"></h4>
+              <h4 id="temp12" class="hourly-info"></h4>
+              <h4 id="temp13" class="hourly-info"></h4>
+              <h4 id="temp14" class="hourly-info"></h4>
+              <h4 id="temp15" class="hourly-info"></h4>
+              <h4 id="temp16" class="hourly-info"></h4>
+              <h4 id="temp17" class="hourly-info"></h4>
+              <h4 id="temp18" class="hourly-info"></h4>
+              <h4 id="temp19" class="hourly-info"></h4>
+              <h4 id="temp20" class="hourly-info"></h4>
+              <h4 id="temp21" class="hourly-info"></h4>
+              <h4 id="temp22" class="hourly-info"></h4>
+              <h4 id="temp23" class="hourly-info"></h4>
+            </div>
+            <div id="hourly-a-temp">
+              <h4 class="overview-subtitle">Hourly Apparent Temperature</h4>
+              <h4 id="atemp0" class="hourly-info"></h4>
+              <h4 id="atemp1" class="hourly-info"></h4>
+              <h4 id="atemp2" class="hourly-info"></h4>
+              <h4 id="atemp3" class="hourly-info"></h4>
+              <h4 id="atemp4" class="hourly-info"></h4>
+              <h4 id="atemp5" class="hourly-info"></h4>
+              <h4 id="atemp6" class="hourly-info"></h4>
+              <h4 id="atemp7" class="hourly-info"></h4>
+              <h4 id="atemp8" class="hourly-info"></h4>
+              <h4 id="atemp9" class="hourly-info"></h4>
+              <h4 id="atemp10" class="hourly-info"></h4>
+              <h4 id="atemp11" class="hourly-info"></h4>
+              <h4 id="atemp12" class="hourly-info"></h4>
+              <h4 id="atemp13" class="hourly-info"></h4>
+              <h4 id="atemp14" class="hourly-info"></h4>
+              <h4 id="atemp15" class="hourly-info"></h4>
+              <h4 id="atemp16" class="hourly-info"></h4>
+              <h4 id="atemp17" class="hourly-info"></h4>
+              <h4 id="atemp18" class="hourly-info"></h4>
+              <h4 id="atemp19" class="hourly-info"></h4>
+              <h4 id="atemp20" class="hourly-info"></h4>
+              <h4 id="atemp21" class="hourly-info"></h4>
+              <h4 id="atemp22" class="hourly-info"></h4>
+              <h4 id="atemp23" class="hourly-info"></h4>
+            </div>
+            <div id="hourly-rain-chance">
+              <h4 class="overview-subtitle">Rain Chance</h4>
+              <h4 id="rainchance0" class="hourly-info"></h4>
+              <h4 id="rainchance1" class="hourly-info"></h4>
+              <h4 id="rainchance2" class="hourly-info"></h4>
+              <h4 id="rainchance3" class="hourly-info"></h4>
+              <h4 id="rainchance4" class="hourly-info"></h4>
+              <h4 id="rainchance5" class="hourly-info"></h4>
+              <h4 id="rainchance6" class="hourly-info"></h4>
+              <h4 id="rainchance7" class="hourly-info"></h4>
+              <h4 id="rainchance8" class="hourly-info"></h4>
+              <h4 id="rainchance9" class="hourly-info"></h4>
+              <h4 id="rainchance10" class="hourly-info"></h4>
+              <h4 id="rainchance11" class="hourly-info"></h4>
+              <h4 id="rainchance12" class="hourly-info"></h4>
+              <h4 id="rainchance13" class="hourly-info"></h4>
+              <h4 id="rainchance14" class="hourly-info"></h4>
+              <h4 id="rainchance15" class="hourly-info"></h4>
+              <h4 id="rainchance16" class="hourly-info"></h4>
+              <h4 id="rainchance17" class="hourly-info"></h4>
+              <h4 id="rainchance18" class="hourly-info"></h4>
+              <h4 id="rainchance19" class="hourly-info"></h4>
+              <h4 id="rainchance20" class="hourly-info"></h4>
+              <h4 id="rainchance21" class="hourly-info"></h4>
+              <h4 id="rainchance22" class="hourly-info"></h4>
+              <h4 id="rainchance23" class="hourly-info"></h4>
+            </div>
+            <div id="hourly-weather-image">
+              <img src="" id="weatherimage0"/>
+              <img src="" id="weatherimage1"/>
+              <img src="" id="weatherimage2"/>
+              <img src="" id="weatherimage3"/>
+              <img src="" id="weatherimage4"/>
+              <img src="" id="weatherimage5"/>
+              <img src="" id="weatherimage6"/>
+              <img src="" id="weatherimage7"/>
+              <img src="" id="weatherimage8"/>
+              <img src="" id="weatherimage9"/>
+              <img src="" id="weatherimage10"/>
+              <img src="" id="weatherimage11"/>
+              <img src="" id="weatherimage12"/>
+              <img src="" id="weatherimage13"/>
+              <img src="" id="weatherimage14"/>
+              <img src="" id="weatherimage15"/>
+              <img src="" id="weatherimage16"/>
+              <img src="" id="weatherimage17"/>
+              <img src="" id="weatherimage18"/>
+              <img src="" id="weatherimage19"/>
+              <img src="" id="weatherimage20"/>
+              <img src="" id="weatherimage21"/>
+              <img src="" id="weatherimage22"/>
+              <img src="" id="weatherimage23"/>
             </div>
           </div>
         </div>
