Function for 7 day forecast mini boxes complete, issues with hover effect

--- a/index.html
+++ b/index.html
@@ -115,79 +115,89 @@
           <div id="seven-day-holder">
             <a href="#day0" id="day0" class="sevenDayA">
               <div id="day0-div" class="sevenDays">
-                <h4 id="day0-date"></h4>
+                <h4 id="day0-date">Awaiting location</h4>
                 <img src="" id="day0-image" />
-                <p id="day0-temp"></p>
-                <p id="day0-rain"></p>
-                <p id="day0-details">Click for more details.</p>
+                <p id="day0-temp" class="hidden"></p>
+                <p id="day0-rain" class="hidden"></p>
+                <p id="day0-details" class="hidden">Click for more details.</p>
               </div>
             </a>
             <a href="#day1" id="day1" class="sevenDayA">
               <div id="day1-div" class="sevenDays">
-                <h4 id="day1-date"></h4>
+                <h4 id="day1-date">Awaiting location</h4>
                 <img src="" id="day1-image" />
-                <p id="day1-temp"></p>
-                <p id="day1-rain"></p>
-                <p id="day1-details">Click for more details.</p>
+                <p id="day1-temp" class="hidden"></p>
+                <p id="day1-rain" class="hidden"></p>
+                <p id="day1-details" class="hidden">Click for more details.</p>
               </div>
             </a>
             <a href="#day2" id="day2" class="sevenDayA">
               <div id="day2-div" class="sevenDays">
-                <h4 id="day2-date"></h4>
+                <h4 id="day2-date">Awaiting location</h4>
                 <img src="" id="day2-image" />
-                <p id="day2-temp"></p>
-                <p id="day2-rain"></p>
-                <p id="day2-details">Click for more details.</p>
+                <p id="day2-temp" class="hidden"></p>
+                <p id="day2-rain" class="hidden"></p>
+                <p id="day2-details" class="hidden">Click for more details.</p>
               </div>
             </a>
             <a href="#day3" id="day3" class="sevenDayA">
               <div id="day3-div" class="sevenDays">
-                <h4 id="day3-date"></h4>
+                <h4 id="day3-date">Awaiting location</h4>
                 <img src="" id="day3-image" />
-                <p id="day3-temp"></p>
-                <p id="day3-rain"></p>
-                <p id="day3-details">Click for more details.</p>
+                <p id="day3-temp" class="hidden"></p>
+                <p id="day3-rain" class="hidden"></p>
+                <p id="day3-details" class="hidden">Click for more details.</p>
               </div>
             </a>
             <a href="#day4" id="day4" class="sevenDayA">
               <div id="day4-div" class="sevenDays">
-                <h4 id="day4-date"></h4>
+                <h4 id="day4-date">Awaiting location</h4>
                 <img src="" id="day4-image" />
-                <p id="day4-temp"></p>
-                <p id="day4-rain"></p>
-                <p id="day4-details">Click for more details.</p>
+                <p id="day4-temp" class="hidden"></p>
+                <p id="day4-rain" class="hidden"></p>
+                <p id="day4-details" class="hidden">Click for more details.</p>
               </div>
             </a>
             <a href="#day5" id="day5" class="sevenDayA">
               <div id="day5-div" class="sevenDays">
-                <h4 id="day5-date"></h4>
+                <h4 id="day5-date">Awaiting location</h4>
                 <img src="" id="day5-image" />
-                <p id="day5-temp"></p>
-                <p id="day5-rain"></p>
-                <p id="day5-details">Click for more details.</p>
+                <p id="day5-temp" class="hidden"></p>
+                <p id="day5-rain" class="hidden"></p>
+                <p id="day5-details" class="hidden">Click for more details.</p>
               </div>
             </a>
             <a href="#day6" id="day6" class="sevenDayA">
               <div id="day6-div" class="sevenDays">
-                <h4 id="day6-date"></h4>
+                <h4 id="day6-date">Awaiting location</h4>
                 <img src="" id="day6-image" />
-                <p id="day6-temp"></p>
-                <p id="day6-rain"></p>
-                <p id="day6-details">Click for more details.</p>
+                <p id="day6-temp" class="hidden"></p>
+                <p id="day6-rain" class="hidden"></p>
+                <p id="day6-details" class="hidden">Click for more details.</p>
+              </div>
+            </a>
+            <a href="#day7" id="day7" class="sevenDayA">
+              <div id="day7-div" class="sevenDays">
+                <h4 id="day7-date">Awaiting location</h4>
+                <img src="" id="day7-image" />
+                <p id="day7-temp" class="hidden"></p>
+                <p id="day7-rain" class="hidden"></p>
+                <p id="day7-details" class="hidden">Click for more details.</p>
               </div>
             </a>
           </div>
           <div id="overview-info">
-            <h3 id="overview-date"></h3>
-            <div id="overview-sunrise-div">
-              <img src="sunrise.png" alt="sunrise" />
-              <h4 id="overview-sunrise-time"></h4>
+            <div id="overview-header">
+              <h3 id="overview-date"></h3>
+              <div id="overview-sunrise-div">
+                <img src="sunrise.png" alt="sunrise" />
+                <h4 id="overview-sunrise-time"></h4>
+              </div>
+              <div id="overview-sunset-div">
+                <img src="sunset.png" alt="sunset" />
+                <h4 id="overview-sunset-time"></h4>
+              </div>
             </div>
-            <div id="overview-sunset-div">
-              <img src="sunset.png" alt="sunset" />
-              <h4 id="overview-sunset-time"></h4>
-            </div>
-
             <div id="hourly-time">
               <h4 class="hourly-info">00:00</h4>
               <h4 class="hourly-info">01:00</h4>
@@ -296,30 +306,30 @@
               <h4 id="rainchance23" class="hourly-info"></h4>
             </div>
             <div id="hourly-weather-image">
-              <img src="" id="weatherimage0"/>
-              <img src="" id="weatherimage1"/>
-              <img src="" id="weatherimage2"/>
-              <img src="" id="weatherimage3"/>
-              <img src="" id="weatherimage4"/>
-              <img src="" id="weatherimage5"/>
-              <img src="" id="weatherimage6"/>
-              <img src="" id="weatherimage7"/>
-              <img src="" id="weatherimage8"/>
-              <img src="" id="weatherimage9"/>
-              <img src="" id="weatherimage10"/>
-              <img src="" id="weatherimage11"/>
-              <img src="" id="weatherimage12"/>
-              <img src="" id="weatherimage13"/>
-              <img src="" id="weatherimage14"/>
-              <img src="" id="weatherimage15"/>
-              <img src="" id="weatherimage16"/>
-              <img src="" id="weatherimage17"/>
-              <img src="" id="weatherimage18"/>
-              <img src="" id="weatherimage19"/>
-              <img src="" id="weatherimage20"/>
-              <img src="" id="weatherimage21"/>
-              <img src="" id="weatherimage22"/>
-              <img src="" id="weatherimage23"/>
+              <img src="" id="weatherimage0" />
+              <img src="" id="weatherimage1" />
+              <img src="" id="weatherimage2" />
+              <img src="" id="weatherimage3" />
+              <img src="" id="weatherimage4" />
+              <img src="" id="weatherimage5" />
+              <img src="" id="weatherimage6" />
+              <img src="" id="weatherimage7" />
+              <img src="" id="weatherimage8" />
+              <img src="" id="weatherimage9" />
+              <img src="" id="weatherimage10" />
+              <img src="" id="weatherimage11" />
+              <img src="" id="weatherimage12" />
+              <img src="" id="weatherimage13" />
+              <img src="" id="weatherimage14" />
+              <img src="" id="weatherimage15" />
+              <img src="" id="weatherimage16" />
+              <img src="" id="weatherimage17" />
+              <img src="" id="weatherimage18" />
+              <img src="" id="weatherimage19" />
+              <img src="" id="weatherimage20" />
+              <img src="" id="weatherimage21" />
+              <img src="" id="weatherimage22" />
+              <img src="" id="weatherimage23" />
             </div>
           </div>
         </div>
