--- a/index.html
+++ b/index.html
@@ -113,76 +113,67 @@
 
         <div id="seven-day-forcast-section">
           <div id="seven-day-holder">
-            <a href="#day0" id="day0" class="sevenDayA">
-              <div id="day0-div" class="sevenDays">
-                <h4 id="day0-date">Awaiting location</h4>
-                <img src="" id="day0-image" />
-                <p id="day0-temp" class="hidden"></p>
-                <p id="day0-rain" class="hidden"></p>
-                <p id="day0-details" class="hidden">Click for more details.</p>
-              </div>
-            </a>
             <a href="#day1" id="day1" class="sevenDayA">
               <div id="day1-div" class="sevenDays">
                 <h4 id="day1-date">Awaiting location</h4>
                 <img src="" id="day1-image" />
-                <p id="day1-temp" class="hidden"></p>
-                <p id="day1-rain" class="hidden"></p>
-                <p id="day1-details" class="hidden">Click for more details.</p>
+                <p id="day1-temp" class="hid1"></p>
+                <p id="day1-rain" class="hid1"></p>
+                <p id="day1-details" class="hid1">Click for more details.</p>
               </div>
             </a>
             <a href="#day2" id="day2" class="sevenDayA">
               <div id="day2-div" class="sevenDays">
                 <h4 id="day2-date">Awaiting location</h4>
                 <img src="" id="day2-image" />
-                <p id="day2-temp" class="hidden"></p>
-                <p id="day2-rain" class="hidden"></p>
-                <p id="day2-details" class="hidden">Click for more details.</p>
+                <p id="day2-temp" class="hid2"></p>
+                <p id="day2-rain" class="hid2"></p>
+                <p id="day2-details" class="hid2">Click for more details.</p>
               </div>
             </a>
             <a href="#day3" id="day3" class="sevenDayA">
               <div id="day3-div" class="sevenDays">
                 <h4 id="day3-date">Awaiting location</h4>
                 <img src="" id="day3-image" />
-                <p id="day3-temp" class="hidden"></p>
-                <p id="day3-rain" class="hidden"></p>
-                <p id="day3-details" class="hidden">Click for more details.</p>
+                <p id="day3-temp" class="hid3"></p>
+                <p id="day3-rain" class="hid3"></p>
+                <p id="day3-details" class="hid3">Click for more details.</p>
               </div>
             </a>
             <a href="#day4" id="day4" class="sevenDayA">
               <div id="day4-div" class="sevenDays">
                 <h4 id="day4-date">Awaiting location</h4>
                 <img src="" id="day4-image" />
-                <p id="day4-temp" class="hidden"></p>
-                <p id="day4-rain" class="hidden"></p>
-                <p id="day4-details" class="hidden">Click for more details.</p>
+                <p id="day4-temp" class="hid4"></p>
+                <p id="day4-rain" class="hid4"></p>
+                <p id="day4-details" class="hid4">Click for more details.</p>
               </div>
             </a>
             <a href="#day5" id="day5" class="sevenDayA">
               <div id="day5-div" class="sevenDays">
                 <h4 id="day5-date">Awaiting location</h4>
                 <img src="" id="day5-image" />
-                <p id="day5-temp" class="hidden"></p>
-                <p id="day5-rain" class="hidden"></p>
-                <p id="day5-details" class="hidden">Click for more details.</p>
+                <p id="day5-temp" class="hid5"></p>
+                <p id="day5-rain" class="hid5"></p>
+                <p id="day5-details" class="hid5">Click for more details.</p>
               </div>
             </a>
             <a href="#day6" id="day6" class="sevenDayA">
               <div id="day6-div" class="sevenDays">
                 <h4 id="day6-date">Awaiting location</h4>
                 <img src="" id="day6-image" />
-                <p id="day6-temp" class="hidden"></p>
-                <p id="day6-rain" class="hidden"></p>
-                <p id="day6-details" class="hidden">Click for more details.</p>
+                <p id="day6-temp" class="hid6"></p>
+                <p id="day6-rain" class="hid6"></p>
+                <p id="day6-details" class="hid6">Click for more details.</p>
               </div>
             </a>
             <a href="#day7" id="day7" class="sevenDayA">
               <div id="day7-div" class="sevenDays">
                 <h4 id="day7-date">Awaiting location</h4>
                 <img src="" id="day7-image" />
-                <p id="day7-temp" class="hidden"></p>
-                <p id="day7-rain" class="hidden"></p>
-                <p id="day7-details" class="hidden">Click for more details.</p>
+                <p id="day7-temp" class="hid7"></p>
+                <p id="day7-rain" class="hid7"></p>
+                <p id="day7-details" class="hid7">Click for more details.</p>
               </div>
             </a>
           </div>
@@ -190,8 +181,8 @@
             <div id="overview-header">
               <h3 id="overview-date"></h3>
               <div id="overview-sunrise-div">
-                <img src="sunrise.png" alt="sunrise" />
-                <h4 id="overview-sunrise-time"></h4>
+                <img src="sunrise.png" alt="sunrise"/>
+                <h4 id="sunrise-time"></h4>
               </div>
               <div id="overview-sunset-div">
                 <img src="sunset.png" alt="sunset" />
