--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
                 <h4 id="overview-sunset-time"></h4>
               </div>
             </div>
-            <div id="hourly-time">
+            <div id="hourly-grid">
+              <h4 class="blank"></h4>
               <h4 class="hourly-info">00:00</h4>
               <h4 class="hourly-info">01:00</h4>
               <h4 class="hourly-info">02:00</h4>
@@ -214,8 +215,6 @@
               <h4 class="hourly-info">21:00</h4>
               <h4 class="hourly-info">22:00</h4>
               <h4 class="hourly-info">23:00</h4>
-            </div>
-            <div id="hourly-temp">
               <h4 class="overview-subtitle">Hourly Temperature</h4>
               <h4 id="temp0" class="hourly-info"></h4>
               <h4 id="temp1" class="hourly-info"></h4>
@@ -241,8 +240,6 @@
               <h4 id="temp21" class="hourly-info"></h4>
               <h4 id="temp22" class="hourly-info"></h4>
               <h4 id="temp23" class="hourly-info"></h4>
-            </div>
-            <div id="hourly-a-temp">
               <h4 class="overview-subtitle">Hourly Apparent Temperature</h4>
               <h4 id="atemp0" class="hourly-info"></h4>
               <h4 id="atemp1" class="hourly-info"></h4>
@@ -268,8 +265,6 @@
               <h4 id="atemp21" class="hourly-info"></h4>
               <h4 id="atemp22" class="hourly-info"></h4>
               <h4 id="atemp23" class="hourly-info"></h4>
-            </div>
-            <div id="hourly-rain-chance">
               <h4 class="overview-subtitle">Rain Chance</h4>
               <h4 id="rainchance0" class="hourly-info"></h4>
               <h4 id="rainchance1" class="hourly-info"></h4>
@@ -295,8 +290,7 @@
               <h4 id="rainchance21" class="hourly-info"></h4>
               <h4 id="rainchance22" class="hourly-info"></h4>
               <h4 id="rainchance23" class="hourly-info"></h4>
-            </div>
-            <div id="hourly-weather-image">
+              <h4 class="blank"></h4>
               <img src="" id="weatherimage0" />
               <img src="" id="weatherimage1" />
               <img src="" id="weatherimage2" />
